test/tests/compiler/18_structures/invalid_parse/extra_credit/union_bad_type_spec.plx
# Can't combine union type specifier with other type specifier
pub a: union x i64;
